Fix combobox long text overlaps clear button
Closes #3093

--- a/app/components/elements/Select.module.css
+++ b/app/components/elements/Select.module.css
@@ -108,6 +108,8 @@
 	font-weight: var(--weight-semi);
 	letter-spacing: 0.5px;
 	flex: 1;
+	min-width: 0;
+	padding-inline-end: calc(18px + var(--s-2));
 
 	&::-webkit-search-cancel-button {
 		display: none;
